--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/AnalysisAndDiscussion/ConvergenceDivergenceAndBeliefSystems.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/AnalysisAndDiscussion/ConvergenceDivergenceAndBeliefSystems.tex
@@ -1,6 +1,6 @@
 Belief system is a topic on which the more we talk, the less the words. This is what's the only reason due to which similarities and differences exists between the thoughts and mentalities of different people. This is what is responsible for influencing, changing, and strengthening our emotions.
 
-Believing in something is called a belief system, and not believing in something is also a belief system in itself. Apart from this, if someone says `I believe' and another says `I don't believe,' one thing is common in both statements, and that is both the persons are in doubtful state that's why they are using the word `belive'. Neither of the two persons will ever say, `I believe that I have two hands' or `I believe that the Taj Mahal is located in Agra' because they know that these two things exists in reality. The word `belive' is always be used in the doubtful situations. The word `believe' is used to justify whether a doubtful statement is a truth or a lie.
+Believing in something is called a belief system, and not believing in something is also a belief system in itself. Apart from this, if someone says `I believe' and another says `I don't believe,' one thing is common in both statements, and that is both the persons are in doubtful state that's why they are using the word `belive'. Neither of the two persons will ever say, `I believe that I have two hands' or `I believe that the Taj Mahal is located in Agra' because they know that these two things exists in reality. The word `belive' is always be used in the doubtful situations. It is used to justify whether a doubtful statement is a truth or a lie.
 
 Now, we try to understand the belief system from a new perspective by momentarily setting aside all the discussions we have had so far about beliefs and belief systems. Consider the equation \ref{eq:1}, it is the example of a geometric series that converges absolutely. This infinite series is related to some philosophical questions considered in antiquity, particularly to Zeno's paradoxes\cite{enwiki:1123380424}.
 
