--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/TheoreticalFramework/Plutchik'sWheelofEmotions.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/TheoreticalFramework/Plutchik'sWheelofEmotions.tex
@@ -3,18 +3,6 @@ He also created a wheel of emotions to illustrate different emotions. Plutchik f
 \begin{figure}[H]
 	\includegraphics[width=\columnwidth, keepaspectratio]{Plutchik'sWheelofEmotions}
 	\caption{Plutchik's Wheel of Emotions}
-	\label{Fig:fig1}
+	\label{Fig:fig}
 \end{figure}
-Figure \ref{Fig:fig1} shows PWOE.
-\begin{figure}[H]
-	\includegraphics[width=\columnwidth, keepaspectratio]{PWOEEnglish}
-	\caption{Full Plutchik's Wheel of Emotions English}
-	\label{Fig:fig2}
-\end{figure}
-Figure \ref{Fig:fig2} shows  Full PWOE English.
-\begin{figure}[H]
-	\includegraphics[width=\columnwidth, keepaspectratio]{PWOEHindi}
-	\caption{Full Plutchik's Wheel of Emotions Hindi}
-	\label{Fig:fig3}
-\end{figure}
-Figure \ref{Fig:fig3} shows PWOE Hindi.
+Figure \ref{Fig:fig} shows PWOE.
