--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/AcceptanceCertificate.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/AcceptanceCertificate.tex
@@ -1,18 +1,22 @@
 \begin{center}
 	\LARGE \textbf{Acceptance Certificate}
-	\vspace{6\baselineskip}
-	
-	\includegraphics[width=150pt, keepaspectratio]{tmu_logo}
-	
-	College of Computing Sciences \& Information Technology\\Teerthanker Mahaveer University\\Moradabad
 	\vspace{2\baselineskip}
 \end{center}
+
+\begin{tabularx}{\textwidth}{>{\hsize=0.5\hsize}XX}
+	\begin{flushleft}
+		\includegraphics[width=150pt, keepaspectratio]{tmu_logo}
+	\end{flushleft} & \begin{center}
+		\vspace{2\baselineskip}
+		\Large College of Computing Sciences \& Information Technology\\Teerthanker Mahaveer University\\Moradabad
+	\end{center}
+\end{tabularx}
+\vspace{2\baselineskip}
  
-\large The project report entitled ``Emotionally Intelligent Machines \& Sentiment Synthesis based on Ancient Vedic Astrology'' submitted by Mr. Mohit Singh (Enrollment No. TCA-2212005) may be accepted for being evaluated.
+\large The seminar report entitled ``Emotionally Intelligent Machines \& Sentiment Synthesis based on Ancient Vedic Astrology'' submitted by Mr. Mohit Singh (Enrollment No. TCA-2212005) may be accepted for being evaluated.
+\vspace{2\baselineskip}
 
-\vspace{\fill}
-
-\begin{tabularx}{\textwidth}{X X}
+\begin{tabularx}{\textwidth}{XX}
 	\begin{center}
 		\textbf{Dr. Priyank Singhal}
 	\end{center} & \begin{center}
