--- a/PaperTemplate.tex
+++ b/PaperTemplate.tex
@@ -12,8 +12,11 @@
 	\section*{Keywords}
 	\begin{multicols}{2}
 		\section{Introduction}
+		\section{Research Model \& Hypothesis}
 		\section{Related Work \& Review of Literature}
-		\section{Methodology}
+		\section{Research Methodology}
+		\section{Theoretical Framework}
+		\section{Analysis \& Discussion}
 		\section{Implementation \& Planned Experiments}
 		\section{Conclusion \& Outlook}
 	\end{multicols}
