--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/Acknowledgements.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/Acknowledgements.tex
@@ -1,4 +1,4 @@
-\textit{``I would like to express my sincere gratitude to all those who have contributed to the completion of this research paper. Firstly, I am very grateful to my supervisors Dr. Priyank Singhal \& Mr. Vikas Kuchhal, my mentor Dr. Anu Sharma and jyotishacharya Mr. DK Lahori for providing me the guidance and support throughout the research. Their feedback, encouragement, and insightful comments have been invaluable in shaping this paper."}
+\textit{``I would like to express my sincere gratitude to all those who have contributed to the completion of this research paper. Firstly, I am very grateful to my supervisors Dr. Priyank Singhal \& Mr. Vikas Kuchhal, my mentor Dr. Anu Sharma and jyotishacharya Mr. DK Lahori for providing me the guidance and support throughout the research. Their feedback, encouragement, and insightful comments have been invaluable in shaping this paper. I am also greatly thankful to them as they has given me an opportunity to work on this interesting topic."}
 
 \textit{``I am very grateful to Dr. RK Dwivedi the director of College of Computing Sciences \& Information Technology for providing me the opportunity to conduct this research as part of my academic program. This research has not only been a valuable learning experience but has also contributed to the knowledge base of the field."}
 
