--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/Acknowledgements.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/Acknowledgements.tex
@@ -3,7 +3,7 @@
 	\vspace{1\baselineskip}
 \end{center}
 
-\textit{``I would like to express my sincere gratitude to my supervisors Dr. Priyank Singhal \& Mr. Vikas Kuchhal, my mentor Dr. Anu Sharma and jyotishacharya Mr. DK Lahori for providing me the guidance, valuable advice and constant encouragement that they provided during this seminar work. I am also greatly thankful to them as he has given me an opportunity to work on this interesting topic."}
+\textit{``I would like to express my sincere gratitude to my supervisors Dr. Priyank Singhal \& Mr. Vikas Kuchhal, my mentor Dr. Anu Sharma and jyotishacharya Mr. DK Lahori for providing me the guidance, valuable advice and constant encouragement that they provided during this seminar work. I am also greatly thankful to them as they has given me an opportunity to work on this interesting topic."}
 
 \textit{``I am very grateful to Dr. RK Dwivedi the director of College of Computing Sciences \& Information Technology for providing me the opportunity to do this seminar as part of my academic program. This seminar has not only been a valuable learning experience but has also contributed to the knowledge base of the field."}
 
