--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/AnalysisAndDiscussion/EIMArchitecture.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/AnalysisAndDiscussion/EIMArchitecture.tex
@@ -11,3 +11,4 @@ Planetary Positions API Astrology Based Sentiment Mapping.
 Figure \ref{Fig:fig2} Plutchik’s Wheel of Emotions Emojis
 
 \subsubsection{Intuition Programming}
+To develop intuition in machines, we have to consider an external source of input which will act as a controlling element for the system.
