--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/main.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/main.tex
@@ -81,8 +81,8 @@
 		\input{TheoreticalFramework/ButterflyEffectChaosTheory}
 		\subsection{Long-Short Term Memory(LSTM)}
 		\input{TheoreticalFramework/LSTM}
-		\subsection{Ancient Vedic Astrology}
-		\input{TheoreticalFramework/AncientVedicAstrology}
+		\subsection{Vedic Astrology}
+		\input{TheoreticalFramework/VedicAstrology}
 		\section{Analysis \& Discussion}
 		\subsection{LSTM, The Conscious \& Subconscious of AI}
 		\subsection{How to design the Unconscious of AI?}
