--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/EmotionDynamics.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/EmotionDynamics.tex
@@ -27,6 +27,7 @@ If we convert this electrical system into its frequency domain equivalent by usi
 where, $ R = $ Emotive Resistance,\\
 $ X_{L} = $ Emotive Inductive Reactance,\\
 $ X_{C} = $ Emotive Capacitive Reactance,\\
-and $ j = \sqrt{-1} $
+and $ j = \sqrt{-1} $ (Imaginary Unit)
+\vspace{1\baselineskip}
 
-Active energy planets are Mars, Mercury, Venus whereas passive energy planets are Saturn and Jupiter. Sun and Moon are continuous source of energy combustion while Rahu and Ketu are continuous sources of consumption in terms of electrical source and sink type connection types\cite{blog}.
+On the other hand, in 2023, Deepanshu Giri, one of the famous astrologer of India discussed in an article of his blog about the analogy between some concepts of an electrical circuit like source, sink, active and passive with different kinds of energies associated with the nine planets in Vedic astrology. According to him, the active energy planets are Mars, Mercury and Venus whereas passive energy planets are Saturn and Jupiter. Also, he mentioned that the Sun and Moon are the continuous sources of energy combustion while Rahu and Ketu are the continuous sources of consumption in terms of electrical source and sink connection types\cite{DeepanshuGiriBlog}.
