--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/Citations.bib
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Paper/Citations.bib
@@ -270,3 +270,10 @@
 	year = "2017",
 	url = {http://milesresearch.com/pdf/Emotion-Dynamics.pdf}
 }
+
+@online{blog,
+	author = {Deepanshu Giri},
+	title = "\href{https://lunarastro.org/understanding-conjunction-in-vedic-astrology/}{Understanding Conjunction in Vedic Astrology}",
+	date = {May 28, 2023},
+	url = {https://lunarastro.org/understanding-conjunction-in-vedic-astrology/},
+}
