--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/LiteratureReview.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/LiteratureReview.tex
@@ -1,99 +1,105 @@
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
+Understanding the need for emotional intelligence in modern machines, and also how psychology and Vedic astrology can contribute to further improvement in machine intelligence. To explore this, we collected some literature related to psychology, Vedic astrology, and dynamical systems. These literatures include recently published researches, some ancient scriptures, and also some articles published on blogs by renowned astrologers and psychology researchers, which are mentioned below.
+\vspace{1\baselineskip}
+
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
 	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
 	\hline
-	\begin{center}\cite{article2}\end{center} & \begin{center}A Concise History of Hindu Astrology and Indian Spirituality\end{center} & \begin{center}-\end{center} & \begin{center}Overview of Rashi, Nakshastras, Navagrahas and Dashas in Vedic Astrology\end{center} & \begin{center}2023\end{center}\\
-	\hline
-	\begin{center}\cite{article1}\end{center} & \begin{center}The Unconscious Mind and Planetary Influences on the Human Unconscious Mind and Personality\end{center} & \begin{center}-\end{center} & \begin{center}Planetary Influences on Human Physiology and Psychology\end{center} & \begin{center}2023\end{center}\\
-	\hline
-	\begin{center}\cite{atmos13081292}\end{center} & \begin{center}Predictability and Predictions\end{center} & \begin{center}Nonlinear, Baroclinic, 3D Model of the Tropical Cyclone\end{center} & \begin{center}Effects of Initial Conditions on Numerical Instabilities\end{center} & \begin{center}2022\end{center}\\
+	\cite{article2} & A Concise History of Hindu Astrology and Indian Spirituality & - & Overview of Rashi, Nakshastras, Navagrahas and Dashas in Vedic Astrology & 2023\\
 	\hline
 \end{tabularx}
 
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
 	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
 	\hline
-	\begin{center}\cite{encyclopedia2030084}\end{center} & \begin{center}Three Kinds of Butterfly Effects within Lorenz Models\end{center} & \begin{center}Classical Lorenz Model\end{center} & \begin{center}Sensitive Dependence of the Solutions of Non-Linear Differential Equations on Initial Conditions\end{center} & \begin{center}2022\end{center}\\
+	\cite{article1} & The Unconscious Mind and Planetary Influences on the Human Unconscious Mind and Personality & - & Planetary Influences on Human Physiology and Psychology & 2023\\
 	\hline
-	\begin{center}\cite{liu21p_interspeech}\end{center} & \begin{center}Reinforcement Learning for Emotional Text-to-Speech Synthesis with Improved Emotion Discriminability\end{center} & \begin{center}Interactive training paradigm for Emotional Text-to-Speech Synthesis (i-ETTS)\end{center} & \begin{center}Use of Reinforcement Learning in Sentiment Synthesis\end{center} & \begin{center}2021\end{center}\\
+	\cite{atmos13081292} & Predictability and Predictions & Nonlinear, Baroclinic, 3D Model of the Tropical Cyclone & Effects of Initial Conditions on Numerical Instabilities & 2022\\
 	\hline
-	\begin{center}\cite{takatsu-etal-2020-sentiment}\end{center} & \begin{center}Sentiment Analysis for Emotional Speech Synthesis in a News Dialogue System\end{center} & \begin{center}Combination of BERT and BiLSTM-CRF Models\end{center} & \begin{center}Need and Real World Application of Sentiment Systhesis\end{center} & \begin{center}2020\end{center}\\
+	\cite{encyclopedia2030084} & Three Kinds of Butterfly Effects within Lorenz Models & Classical Lorenz Model & Sensitive Dependence of the Solutions of Non-Linear Differential Equations on Initial Conditions & 2022\\
 	\hline
-\end{tabularx}
-
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
-	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
-	\hline
-	\begin{center}\cite{electronics9030483}\end{center} & \begin{center}Sentiment Analysis Based on Deep Learning: A Comparative Study\end{center} & \begin{center}DNN, CNN, RNN and TF-IDF\end{center} & \begin{center}Application of different types of Deep Learning Techniques on Sentiment Analysis\end{center} & \begin{center}2020\end{center}\\
-	\hline
-	\begin{center}\cite{doi:10.1080/14755610.2022.2093234}\end{center} & \begin{center}Astrology, modernity and the project of self-identity\end{center} & \begin{center}-\end{center} & \begin{center}Application of Astrology in getting Self-Knowledge, Self-Determination and Encouragement of Elective Biography and Self-Identity\end{center} & \begin{center}2020\end{center}\\
-	\hline
-	\begin{center}\cite{article0}\end{center} & \begin{center}Generative Adversarial Networks in Human Emotion Synthesis:A Review\end{center} & \begin{center}Generative Adversarial Networks(GANs)\end{center} & \begin{center}Working of GAN Model and Sentiment Sythesis using it\end{center} & \begin{center}2020\end{center}\\
+	\cite{liu21p_interspeech} & Reinforcement Learning for Emotional Text-to-Speech Synthesis with Improved Emotion Discriminability & Interactive training paradigm for Emotional Text-to-Speech Synthesis (i-ETTS) & Use of Reinforcement Learning in Sentiment Synthesis & 2021\\
 	\hline
 \end{tabularx}
 
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
 	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
 	\hline
-	\begin{center}\cite{article3}\end{center} & \begin{center}Summarizing Emotions from Text Using Plutchik's Wheel of Emotions\end{center} & \begin{center}Psychological Model of different Human Sentiments\end{center} & \begin{center}Sentiment Analysis using Plutchik’s Wheel of Emotions\end{center} & \begin{center}2019\end{center}\\
+	\cite{takatsu-etal-2020-sentiment} & Sentiment Analysis for Emotional Speech Synthesis in a News Dialogue System & Combination of BERT and BiLSTM-CRF Models & Need and Real World Application of Sentiment Systhesis & 2020\\
 	\hline
-	\begin{center}\cite{ISSN-2456-2165}\end{center} & \begin{center}The Study of Emotional Intelligence in	Artificial Intelligence\end{center} & \begin{center}-\end{center} & \begin{center}Role of Emotional Intelligence in Artificial Intelligence and its Potential Applications\end{center} & \begin{center}2019\end{center}\\
+	\cite{electronics9030483} & Sentiment Analysis Based on Deep Learning: A Comparative Study & DNN, CNN, RNN and TF-IDF & Application of different types of Deep Learning Techniques on Sentiment Analysis & 2020\\
 	\hline
-	\begin{center}\cite{article4}\end{center} & \begin{center}Consciousness and Unconsciousness of Artificial Intelligence\end{center} & \begin{center}-\end{center} & \begin{center}Problem of Multilevel Mind in Artificial Intelligence Systems\end{center} & \begin{center}2019\end{center}\\
+	\cite{doi:10.1080/14755610.2022.2093234} & Astrology, modernity and the project of self-identity & - & Application of Astrology in getting Self-Knowledge, Self-Determination and Encouragement of Elective Biography and Self-Identity & 2020\\
 	\hline
-	\begin{center}\cite{article5}\end{center} & \begin{center}Word-level sentiment analysis with reinforcement learning\end{center} & \begin{center}LSTM(WS-LSTM) Model\end{center} & \begin{center}Application of LSTMs in Sentiment Analysis\end{center} & \begin{center}2019\end{center}\\
-	\hline
-\end{tabularx}
-
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
-	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
-	\hline
-	\begin{center}\cite{article7}\end{center} & \begin{center}Sentiment Intensity Ranking among Adjectives Using Sentiment Bearing Word Embeddings\end{center} & \begin{center}Semi-Supervised Technique\end{center} & \begin{center}Sentiment Specific Word Embeddings (SSWE) are significantly better than word2vec and GloVe\end{center} & \begin{center}2017\end{center}\\
-	\hline
-	\begin{center}\cite{article6}\end{center} & \begin{center}Emotional Chatting Machine: Emotional Conversation Generation with Internal and External Memory\end{center} & \begin{center}Gated Recurrent Unit(GRU)\end{center} & \begin{center}Model can Generate Emotions as Responses\end{center} & \begin{center}2017\end{center}\\
-	\hline
-	\begin{center}\cite{article}\end{center} & \begin{center}Long Short-term Memory\end{center} & \begin{center}-\end{center} & \begin{center}Introduction to LSTM-RNN\end{center} & \begin{center}1997\end{center}\\
+	\cite{article0} & Generative Adversarial Networks in Human Emotion Synthesis:A Review & Generative Adversarial Networks(GANs) & Working of GAN Model and Sentiment Sythesis using it & 2020\\
 	\hline
 \end{tabularx}
 
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
 	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
 	\hline
-	\begin{center}\cite{SuryaSiddhanta}\end{center} & \begin{center}Surya Siddhanta of Mayasura by Prof. Ram Chandra Pandey\end{center} & \begin{center}Ancient Mathematical Techniques for Calculations of Astronomical Phenomena\end{center} & \begin{center}Timings, Dashas and Transits in Vedic Astrology\end{center} & \begin{center}1999\end{center}\\
+	\cite{article3} & Summarizing Emotions from Text Using Plutchik's Wheel of Emotions & Psychological Model of different Human Sentiments & Sentiment Analysis using Plutchik’s Wheel of Emotions & 2019\\
 	\hline
-	\begin{center}\cite{BrihatParasharHoraShastraVol1}\end{center} & \begin{center}Brihat Parashar Hora Shastra of Maharishi Parashar Vol.1\end{center} & \begin{center}-\end{center} & \begin{center}Guidelines and Principles for Analyzing a Person's Traits, Strengths, Weaknesses\end{center} & \begin{center}1996\end{center}\\
+	\cite{ISSN-2456-2165} & The Study of Emotional Intelligence in	Artificial Intelligence & - & Role of Emotional Intelligence in Artificial Intelligence and its Potential Applications & 2019\\
 	\hline
-	\begin{center}\cite{BrihatParasharHoraShastraVol2}\end{center} & \begin{center}Brihat Parashar Hora Shastra of Maharishi Parashar Vol.2\end{center} & \begin{center}-\end{center} & \begin{center}Effects of Dashas and Transits on a Person's Traits, Strengths, Weaknesses\end{center} & \begin{center}1996\end{center}\\
+	\cite{article4} & Consciousness and Unconsciousness of Artificial Intelligence & - & Problem of Multilevel Mind in Artificial Intelligence Systems & 2019\\
+	\hline
+	\cite{article5} & Word-level sentiment analysis with reinforcement learning & LSTM(WS-LSTM) Model & Application of LSTMs in Sentiment Analysis & 2019\\
+	\hline
+	\cite{article7} & Sentiment Intensity Ranking among Adjectives Using Sentiment Bearing Word Embeddings & Semi-Supervised Technique & Sentiment Specific Word Embeddings (SSWE) are significantly better than word2vec and GloVe & 2017\\
 	\hline
 \end{tabularx}
 
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
 	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
 	\hline
-	\begin{center}\cite{wiki:ss}\end{center} & \begin{center}Surya Siddhanta - Wikisource\end{center} & \begin{center}Ancient Mathematical Techniques for Calculations of Astronomical Phenomena\end{center} & \begin{center}Timings, Dashas and Transits in Vedic Astrology\end{center} & \begin{center}2018\end{center}\\
+	\cite{article6} & Emotional Chatting Machine: Emotional Conversation Generation with Internal and External Memory & Gated Recurrent Unit(GRU) & Model can Generate Emotions as Responses & 2017\\
 	\hline
-	\begin{center}\cite{wiki:bphs}\end{center} & \begin{center}Brihat Parashara Hora Shastra - Wikisource\end{center} & \begin{center}-\end{center} & \begin{center}Guidelines and Principles for Analyzing a Person's Traits, Strengths, Weaknesses\end{center} & \begin{center}2023\end{center}\\
+	\cite{article} & Long Short-term Memory & - & Introduction to LSTM-RNN & 1997\\
 	\hline
-	\begin{center}\cite{enwiki:1123380424}\end{center} & \begin{center}Geometric Series --- {Wikipedia}\end{center} & \begin{center}Convergence\end{center} & \begin{center}Relation of Convergence with Human Beliefs\end{center} & \begin{center}2022\end{center}\\
+	\cite{SuryaSiddhanta} & Surya Siddhanta of Mayasura by Prof. Ram Chandra Pandey & Ancient Mathematical Techniques for Calculations of Astronomical Phenomena & Timings, Dashas and Transits in Vedic Astrology & 1999\\
 	\hline
-	\begin{center}\cite{enwiki:1148245424}\end{center} & \begin{center}Ramanujan summation --- {Wikipedia}\end{center} & \begin{center}Divergence\end{center} & \begin{center}Relation of Divergence with Human Beliefs\end{center} & \begin{center}2023\end{center}\\
+	\cite{BrihatParasharHoraShastraVol1} & Brihat Parashar Hora Shastra of Maharishi Parashar Vol.1 & - & Guidelines and Principles for Analyzing a Person's Traits, Strengths, Weaknesses & 1996\\
+	\hline
+	\cite{BrihatParasharHoraShastraVol2} & Brihat Parashar Hora Shastra of Maharishi Parashar Vol.2 & - & Effects of Dashas and Transits on a Person's Traits, Strengths, Weaknesses & 1996\\
+	\hline
+\end{tabularx}
+
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
+	\hline
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
+	\hline
+	\cite{wiki:ss} & Surya Siddhanta - Wikisource & Ancient Mathematical Techniques for Calculations of Astronomical Phenomena & Timings, Dashas and Transits in Vedic Astrology & 2018\\
+	\hline
+	\cite{wiki:bphs} & Brihat Parashara Hora Shastra - Wikisource & - & Guidelines and Principles for Analyzing a Person's Traits, Strengths, Weaknesses & 2023\\
+	\hline
+	\cite{enwiki:1123380424} & Geometric Series --- {Wikipedia} & Convergence & Relation of Convergence with Human Beliefs & 2022\\
+	\hline
+	\cite{enwiki:1148245424} & Ramanujan summation --- {Wikipedia} & Divergence & Relation of Divergence with Human Beliefs & 2023\\
+	\hline
+	\cite{enwiki:1136521972} & Robert Plutchik --- {Wikipedia} & Modelling of Human Emotions on the Basis of Psychology & Relationship Between Different Kinds of Human Emotions & 2023\\
+	\hline
+	\cite{milesresearch} & Emotion Dynamics - Equations of Emotion & Modelling of Human Emotions on the Basis of Analogy & Analogy of Human Mind with an Electrical Dynamical System & 2017\\
 	\hline
 \end{tabularx}
 \vspace{2\baselineskip}
 
-\begin{tabularx}{\columnwidth}{|X|X|X|X|X|}
+\noindent
+\begin{tabularx}{\columnwidth}{|M|M|M|M|M|}
 	\hline
-	\begin{center}\textbf{Ref. No.}\end{center} & \begin{center}\textbf{Paper Title}\end{center} & \begin{center}\textbf{Techniques}\end{center} & \begin{center}\textbf{Findings}\end{center} & \begin{center}\textbf{Year}\end{center}\\
+	\textbf{Ref. No.} & \textbf{Paper Title} & \textbf{Techniques} & \textbf{Findings} & \textbf{Year}\\
 	\hline
-	\begin{center}\cite{enwiki:1136521972}\end{center} & \begin{center}Robert Plutchik --- {Wikipedia}\end{center} & \begin{center}Modelling of Human Emotions on the Basis of Psychology\end{center} & \begin{center}Relationship Between Different Kinds of Human Emotions\end{center} & \begin{center}2023\end{center}\\
-	\hline
-	\begin{center}\cite{milesresearch}\end{center} & \begin{center}Emotion Dynamics - Equations of Emotion\end{center} & \begin{center}Modelling of Human Emotions on the Basis of Analogy\end{center} & \begin{center}Analogy of Human Mind with an Electrical Dynamical System\end{center} & \begin{center}2017\end{center}\\
+	\cite{DeepanshuGiriBlog} & Understanding Conjunction in Vedic Astrology & - & Analogy of Electrical Concepts with Vedic Astrology& 2023\\
 	\hline
 \end{tabularx}
 \vspace{2\baselineskip}
@@ -113,7 +119,7 @@ In 2022, Shen, Bo-Wen and Pielke, Roger A. and Zeng, Xubin and Cui, Jialin and F
 In 2021, Rui Liu and Berrak Sisman and Haizhou Li in their paper ``Reinforcement Learning for Emotional Text-to-Speech Synthesis with Improved Emotion Discriminability" proposes a new interactive training paradigm for Emotional Text-to-Speech Synthesis (ETTS) called i-ETTS, which aims to improve the emotion discriminability of the generated voice by interacting with a Speech Emotion Recognition (SER) model. The proposed i-ETTS outperforms the state-of-the-art baselines by rendering speech with more accurate emotion style. The authors formulate an iterative training strategy with reinforcement learning to ensure the quality of i-ETTS optimization. The proposed i-ETTS achieves remarkable performance by consistently outperforming the ETTS baseline systems in terms of voice quality and emotion discriminability\cite{liu21p_interspeech}.
 \vspace{1\baselineskip}
 
-In 2020, Takatsu, Hiroaki  and Ando, Ryota and Matsuyama, Yoichi  and Kobayashi, Tetsunori in their paper ``Sentiment Analysis for Emotional Speech Synthesis in a News Dialogue System" proposes a method to control emotional parameters of speech synthesis in a news dialogue system by constructing a news dataset with emotion labels annotated for each sentence. They use a model combining BERT and BiLSTM-CRF to identify emotion labels and evaluate its effectiveness using the constructed dataset. The model performance can be improved by preferentially annotating articles with low confidence in the human-in-the-loop machine learning framework. The future work includes developing a speech synthesis system that can control emotional parameters using the emotion label estimated by the proposed model and confirming whether speaking with emotion promotes users' understanding in news delivery tasks\cite{takatsu-etal-2020-sentiment}.
+In 2020, Takatsu, Hiroaki  and Ando, Ryota and Matsuyama, Yoichi  and Kobayashi, Tetsunori in their paper ``Sentiment Analysis for Emotional Speech Synthesis in a News Dialogue System" proposes a method to control emotional parameters of speech synthesis in a news dialogue system by constructing a news dataset with emotion labels annotated for each sentence. They use a model combining BERT and BiLSTM-CRF to identify emotion labels and evaluate its effectiveness using the constructed dataset. The model performance can be improved by preferentially annotating articles with low confidence in the human-in-the-loop machine learning framework. The future work includes developing a speech synthesis system that can control emotional parameters using the emotion label estimated by the proposed model and confirming whether speaking with emotion promotes user's understanding in news delivery tasks\cite{takatsu-etal-2020-sentiment}.
 \vspace{1\baselineskip}
 
 In 2020, Dang, Nhan Cach and Moreno-García, María N. and De la Prieta, Fernando in their paper ``Sentiment Analysis Based on Deep Learning: A Comparative Study" discusses the use of deep learning models for sentiment analysis on social network data. The authors review the latest studies that have employed deep learning to solve sentiment analysis problems, such as sentiment polarity. They used word embedding and TF-IDF to transform input data before feeding that data into deep learning models. The architectures of DNN, CNN, and RNN were analyzed and combined with word embedding and TF-IDF to perform sentiment analysis. The authors conducted experiments to evaluate DNN, CNN, and RNN models on datasets of different topics, including tweets and reviews. Finally, a comparative study has been conducted on the experimental results obtained for the different models and input features\cite{electronics9030483}.
@@ -153,7 +159,7 @@ Surya Siddhanta is a significant ancient mathematical text in Vedic Astrology an
 The Brihat Parashara Hora Shastra is one of the most important and comprehensive texts in Vedic astrology. It is considered one of the foundational texts in Vedic astrology, also known as Jyotish. The word "Hora" refers to the branch of astrology that deals with the interpretation of planetary positions and their effects on individuals and events. The text provides detailed guidelines and principles for analyzing a person's horoscope to determine their personality traits, strengths, weaknesses, and future prospects. It explores topics such as the significance of the twelve houses, the nature and characteristics of the nine planets (including the Sun, Moon, Mars, Mercury, Jupiter, Venus, Saturn, Rahu, and Ketu), and the impact of planetary periods (dashas) on a person's life. The Brihat Parashara Hora Shastra is highly revered among astrologers and is studied and referenced extensively for astrological predictions and consultations. It is a comprehensive guide that offers insights into the principles and practices of Vedic astrology, helping practitioners gain a deeper understanding of the cosmic influences on human life\cite{BrihatParasharHoraShastraVol1,BrihatParasharHoraShastraVol2, wiki:bphs}.
 \vspace{1\baselineskip}
 
-An article on wikipedia gives an example of a geometric series that converges absolutely. This infinite series is related to some philosophical questions considered in antiquity, particularly to Zeno's paradoxes. It can be very useful in understanding the relationship between the belief systems of human mind and concept of convergence which is one the very important concept in the theories of dynamical systems, control systems and artificial neural networks.\cite{enwiki:1123380424}.
+An article on wikipedia gives an example of a geometric series that converges absolutely. This infinite series is related to some philosophical questions considered in antiquity, particularly to Zeno's paradoxes. It can be very useful in understanding the relationship between the belief systems of human mind and concept of convergence which is one the very important concept in the theories of dynamical systems, control systems and artificial neural networks\cite{enwiki:1123380424}.
 \vspace{1\baselineskip}
 
 Ramanujan summation is an infinite divergent series which is a technique invented by the mathematician Srinivasa Ramanujan for assigning a value to divergent infinite series. Although the Ramanujan summation of a divergent series is not a sum in the traditional sense, it has properties that make it mathematically useful in the study of divergent infinite series, for which conventional summation is undefined\cite{enwiki:1148245424}.
@@ -162,4 +168,7 @@ Ramanujan summation is an infinite divergent series which is a technique invente
 In 1980, Robert Plutchik proposed a psychoevolutionary classification approach for general emotional responses. He considered there to be eight primary emotions—anger, fear, sadness, disgust, surprise, anticipation, trust, and joy and discussed about the bipolar relationship between them. He also created a wheel of emotions to illustrate different emotions which is known as the Plutchik's Wheel of Emotions\cite{enwiki:1136521972}.
 \vspace{1\baselineskip}
 
-In 2017, Jon Miles published a blog on his website. In this blog named emotion dynamics or equation of emotions, he discussed about the mathematical modelling of human sentiments and different states of human mind which is based on the analogy of human mind with an electrical dynamical system. According to his blog, the three phenomenas of mind, craving, anger and attachment are related to each other as like the inductance, resistance and capacitance in an electrical network by a second order ordinary linear differential equation \cite{milesresearch}.
+In 2017, Jon Miles published an article on his blog. In this article, named ``Emotion Dynamics, Equation of Emotions", he discussed about the mathematical modelling of human sentiments and different states of human mind which is based on the analogy of human mind with an electrical dynamical system. According to his blog, the three phenomenas of mind, craving, anger and attachment are related to each other as like the inductance, resistance and capacitance in an electrical network by a second order ordinary linear differential equation\cite{milesresearch}.
+\vspace{1\baselineskip}
+
+In 2023, Deepanshu Giri published an article on his blog. In this article, named ``Understanding Conjunction in Vedic Astrology", he discussed the analogy between some concepts of an electrical circuit like source, sink, active and passive with different kinds of energies associated with the nine planets in Vedic astrology\cite{DeepanshuGiriBlog}.
