--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/main.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/main.tex
@@ -58,8 +58,10 @@
 	\input{TheoreticalFramework/CognitivePsychology}
 	\subsection{Plutchik's Wheel of Emotions}
 	\input{TheoreticalFramework/Plutchik'sWheelofEmotions}
-	\subsection{Logical Thinking V/S Intuitive Thinking}
+	\subsection{Logical Thinking vs Intuitive Thinking}
 	\input{TheoreticalFramework/LogicAndIntuition}
+	\subsection{Convergence, Divergence \& Belief Systems}
+	\input{TheoreticalFramework/ConvergenceDivergenceAndBeliefSystems}
 	\subsection{Emotion Dynamics}
 	\input{TheoreticalFramework/EmotionDynamics}
 	\subsection{Butterfly Effect \& Chaos Theory}
