--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/VedicAstrology.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/VedicAstrology.tex
@@ -1,3 +1,6 @@
+Astrology is like the snapshot of our unconscious mind. The planetary vibrations reflected or refracted along with solar radiations to the earth are of varying intensities as per planetary distance, size, and movement in the solar system. These vibrations impact our sensory nerves, mental attitudes, and moods. Thus, it’s very likely that these planetary vibrations supply the energies to the body cells though our nerves. Since these vibrations differ in wavelength intensity and frequency as per the planetary properties and motion. These vibrations supply different sensory stimuli which impacts the human unconscious and personality at the time of birth\cite{article1}.
+
+\subsubsection{Classification of Vedic Astrology}
 Vedic astrology, also known as Jyotish, is an ancient system of astrology that originated in the Indian subcontinent. It is considered one of the oldest astrological systems in the world and has its roots in the Vedas, the ancient sacred texts of Hinduism.
 Vedic astrology(Jyotish) is one of the most important limb(Vedanga) out of the total six limbs(Vedangas) found in the ancient Indian scriptures. The origins of Vedic astrology can be traced back to around 1500 BCE, during the late Vedic period. It is classified into the three major branches or disciplines known as the Siddhanta, Samhita and Hora. These branches provide different approaches and methods for studying and practicing astrology.
 
@@ -9,84 +12,30 @@ Vedic astrology(Jyotish) is one of the most important limb(Vedanga) out of the t
 
 There are many ancient texts and scriptures about all these three branches of the vedic astrology, that were written by Maharishies. But here, we are only considering the Surya Siddhanta\cite{SuryaSiddhanta, wiki:ss} and Brihat Parashara Hora Shastra\cite{BrihatParasharHoraShastraVol1, BrihatParasharHoraShastraVol2, wiki:bphs} which are the most popular texts that are used by most of the astrologers today for astrological predictions and consultations. We also discuss some of rules and priciples described by the dictums found in these texts.
 
-\subsubsection{Significance of Houses}
-The concept of houses plays a significant role in interpreting a person's birth chart or horoscope. The chapters 13 to 24 of Brihat Parashara Hora Shastra\cite{BrihatParasharHoraShastraVol1, BrihatParasharHoraShastraVol2, wiki:bphs} discusses in detail about all these houses. We can understand the concept of the houses by the following dictum:
-
-\begin{sanskrit}
-	\begin{center}
-		गच्छन्तो भानि गृह्णन्ति सततं ये तु ते ग्रहः।
-		भचक्रस्य नगश्व्यंशा अश्विन्यादिसमाह्वयाः॥३:४॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}\label{Dictum1}
-		तद्‌द्वादशविभागास्तु तुल्य मेषादिसंज्ञकाः।
-		प्रसिद्धा राशयः सन्ति ग्रहास्त्वर्कादिसंज्ञकाः॥३:५॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}\label{Dictum2}
-		राशीनामुदयो लग्नं तद्वशादेव जन्मिनाम्‌।
-		ग्रहयोग्वियोगाभ्यां फलं चिन्त्यं शुभाशुभम्‌॥३:६॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}\label{Dictum3}
-	\end{center}
-\end{sanskrit}
-The space is divided into twelve houses, also known as "Bhavas," which represent different aspects of an individual's life. Each house is associated with specific areas of life, such as personality traits, relationships, career, wealth, health, spirituality, and more. Here's a brief introduction to the twelve houses in Vedic astrology:
-
-Those planets that constantly move and grab the houses, they are the celestial bodies. The divisions of the zodiac are the angles of the chariot, starting with Ashvini and others.
-
-The twelve divisions are known as equal signs, starting with Aries and others. The well-known zodiac signs are the celestial bodies, starting with the Sun and others.
-
-The rising sign of the zodiac is the Ascendant for individuals. By the combination or separation of the planets, the auspicious and inauspicious results should be contemplated.
+\subsubsection{Properties of Planets}
+The study of planets holds great significance in understanding an individual's horoscope and predicting future events. Vedic astrology recognizes nine celestial bodies as planets, including the Sun, Moon, Mercury, Venus, Mars, Jupiter, Saturn, Rahu, and Ketu. Here's a brief introduction to each of these planets in the context of Vedic astrology:
 
 \begin{itemize}
-	\item \textbf{First House (Lagna or Ascendant):} Represents the self, physical appearance, personality, and overall life path.
-	\item \textbf{Second House:} Pertains to wealth, possessions, speech, family, values, and self-worth.
-	\item \textbf{Third House:} Governs communication, siblings, skills, short trips, courage, and intellect.
-	\item \textbf{Fourth House:} Represents home, mother, comfort, real estate, ancestral property, and emotional foundation.
-	\item \textbf{Fifth House:} Relates to creativity, intelligence, children, education, romance, and speculative endeavors.
-	\item \textbf{Sixth House:} Deals with health, daily routine, enemies, debts, conflicts, and service to others.
-	\item \textbf{Seventh House:} Focuses on partnerships, marriage, relationships, business collaborations, and public image.
-	\item \textbf{Eighth House:} Associated with transformations, secrets, inheritances, spirituality, life and death, and occult sciences.
-	\item \textbf{Ninth House:} Relates to higher knowledge, beliefs, philosophy, long-distance travel, luck, and spiritual pursuits.
-	\item \textbf{Tenth House:} Governs career, reputation, social status, achievements, authority, and public recognition.
-	\item \textbf{Eleventh House:} Pertains to gains, friendships, social networks, aspirations, goals, and humanitarian activities.
-	\item \textbf{Twelfth House:} Represents solitude, spirituality, hidden enemies, subconscious mind, losses, and liberation.
+	\item \textbf{Sun (Surya):} The Sun represents the self, vitality, authority, and leadership. It symbolizes the soul and is considered the king among the planets.
+	\item \textbf{Moon (Chandra):} The Moon represents emotions, mind, instincts, and nurturing qualities. It influences the individual's emotional well-being and intuition.
+	\item \textbf{Mercury (Budha):} Mercury is associated with communication, intellect, logic, and adaptability. It governs speech, learning, and mental abilities.
+	\item \textbf{Venus (Shukra):} Venus is the planet of love, beauty, art, and harmony. It governs relationships, attraction, creativity, and material pleasures.
+	\item \textbf{Mars (Mangal):} Mars signifies energy, passion, courage, and assertion. It governs ambition, drive, physical strength, and competitiveness.
+	\item \textbf{Jupiter (Guru):} Jupiter is considered the most benefic planet in Vedic astrology. It represents wisdom, knowledge, expansion, abundance, and spirituality.
+	\item \textbf{Saturn (Shani):} Saturn is associated with discipline, responsibility, hard work, and karmic lessons. It teaches patience, endurance, and signifies limitations and life challenges.
+	\item \textbf{Rahu:} Rahu is a shadow planet and represents material desires, obsession, illusions, and worldly attachments. It signifies ambition and can bring sudden changes.
+	\item \textbf{Ketu:} Ketu is the other shadow planet and represents spirituality, detachment, mysticism, and karmic lessons. It signifies liberation and can bring unconventional experiences.
 \end{itemize}
 
-Each house is further influenced by the planetary positions and aspects, providing insights into different areas of life and their interconnections. Analyzing the houses and their interactions helps astrologers interpret a person's life circumstances, potential challenges, and opportunities for growth and fulfillment.
+Each planet's placement, aspects, and interactions with other planets in an individual's birth chart play a crucial role in determining their personality traits, strengths, challenges, and life events according to Vedic astrology.
 
-\subsubsection{Properties of Zodiac Signs}
-\begin{sanskrit}
-	\begin{center}
-		अथ खेटा रविश्चन्द्रो मङ्गलश्च बुधस्तथा।\\गुरुः शुक्रः शनि राहुः केतुश्चैते यथाक्रमम्‌॥३:११॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}\label{Dictum3}
-		मेषो वृषश्च मिथुनः कर्कसिंहकुमारिकाः।\\तुलालिऽश्च धनुर्नक्रे कुम्भो मीनस्ततः परम्‌॥४:३॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}\label{s2}
-	\end{center}
-\end{sanskrit}
-Sun, Moon, Mars, Mercury, Jupiter, Venus, Saturn, Rahu, and Ketu, these are mentioned in order, one by one.\ref{Dictum3}
-Aries, Taurus, Gemini, Cancer, Leo, Virgo, Libra, Scorpio, Sagittarius and Pisces are the twelve contellations also known as the zodiac signs.\ref{s2}
-However, the main source of all these things are the four basic elements which are the Fire, Water, Wind, Earth \& Sky.
-However, describing all the shlokas here is not possible but properties of the twelve zodiac signs are described in shloka number 7 to 23 of BPHS\cite{BrihatParasharHoraShastraVol1, wiki:bphs} which are interpreted by the astrologers as follows:
-Aries, Taurus, Gemini, Cancer, Leo, Virgo, Libra, Scorpio, Sagittarius and Pisces.
-
-\subsubsection{Properties of Planets}
-\begin{sanskrit}
-	\begin{center}
-		सर्वात्मा च दीवानाथो मनः कुमुदबान्धवः।\\सत्त्वं कुजो बुधैः प्रोक्तो बुधो वाणीप्रदायकः॥३:१३॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}
-	\end{center}
-\end{sanskrit}
-\begin{sanskrit}
-	\begin{center}
-		देवेज्यो ज्ञानसुखदो भृगुर्वीर्यप्रदयकः।\\ऋषिभिः प्राक्‌तनैः प्रोक्तश्छायासूनुश्च दुःखदः॥३:१४॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}
-	\end{center}
-\end{sanskrit}
-Jupiter(Brihaspati) is the significator of wisdom. 
-Venus(Shukra) is resposible for joy \& ecstacy.
-\begin{sanskrit}
-	\begin{center}
-		रविचन्द्रौ तु राजानौ नेता ज्ञेयो धरात्मजः।\\बुधो राजकुमारश्च सचिवौ गुरुभार्गवौ॥३:१५॥\cite{BrihatParasharHoraShastraVol1, wiki:bphs}
-	\end{center}
-\end{sanskrit}
-Mars(Mangal) is responsible for the strength of a native which leads to the emotion of anger.
-Rahu
 \subsubsection{Dashas \& Transits}
-\begin{sanskrit}
-	\begin{center}
-		विकलानाम् कला षष्ट्या तत्षष्ट्या भाग उच्यते।\\तत्त्रिम्शता भवेद् राशिर् भगणो द्वादशैव ते॥१:२८॥\cite{SuryaSiddhanta, wiki:ss}
-	\end{center}
-\end{sanskrit}
-60 Vikalas make one kala and 60 kalas make one degree(\textdegree) or one amsa. 30\textdegree(degrees or amsa) make one rashi(one zodiac sign) and twelve such rashies(zodiac signs) make one revolution(bhagana) of the zodiac.
+In Vedic astrology, dashas and transits are important techniques used to predict and analyze various aspects of a person's life based on the positions of planets and their movements at particular time periods after the birth of an individual. Chapter 53 of BPHS\cite{BrihatParasharHoraShastraVol1, BrihatParasharHoraShastraVol2, wiki:bphs} discusses about different effects of dashas of the different planets.
+
+\begin{itemize}
+	\item \textbf{Dashas:} Dashas are planetary periods that determine the major themes and influences in a person's life. They are calculated based on the position of the Moon at the time of birth. Each dasha is associated with a specific planet, and it represents a specific time period during which that planet's energy dominates. The most commonly used dasha system is the Vimshottari Dasha, which consists of a cycle of major and sub-periods of the planets.
+	\item \textbf{Transits:} Transits, also known as `gochara', refer to the current positions of planets in relation to an individual's birth chart. They provide insights into the ongoing influences and events happening in a person's life. The movement of planets in the sky affects different areas of life and can trigger various experiences and opportunities. Astrologers analyze transits to understand the potential effects of planetary movements on different aspects of life, such as career, relationships, health, and finance. Table \ref{Table:table} represents the time required by all nine planets to complete one zodiac sign which is calculated in chapter 1, verse 29 to 34 of Surya Siddhanta\cite{SuryaSiddhanta, wiki:ss}.
+\end{itemize}
 
 \noindent
 \begin{table}[H]
@@ -117,8 +66,4 @@ Rahu
 	\label{Table:table}
 \end{table}
 
-Table \ref{Table:table} represents the time required by all nine planets to complete one zodiac sign which is calculated in chapter 1, verse 29 to 34 of Surya Siddhanta\cite{SuryaSiddhanta, wiki:ss}.
-
-Effect of dashaas of the different planets in Chapter number 53 of BPHS.
-
-The planetary vibrations reflected or refracted along with solar radiations to the earth are of varying intensities as per planetary distance, size, and movement in the solar system. These vibrations impact our sensory nerves, mental attitudes, and moods. Thus, it’s very likely that these planetary vibrations supply the energies to the body cells though our nerves. Since these vibrations differ in wavelength intensity and frequency as per the planetary properties and motion; these vibrations supply different sensory stimuli which impacts the human unconscious and personality at the time of birth\cite{article}.
+Dashas and transits are used together to gain a comprehensive understanding of a person's life events and their timing. Dashas provide long-term trends and major life themes, while transits offer more immediate influences and shorter-term predictions. By analyzing the interaction between the dashas and transits, astrologers can make predictions, provide guidance, and suggest remedies to navigate through life's challenges and make the most of favorable periods.
