--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/CognitivePsychology.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/CognitivePsychology.tex
@@ -1,6 +1,6 @@
 Human mind is one of the most important part of the entire human body which contains thoughts, imagination, memory, will power \& sensation. Every human being has it's own personality. Some have similar personalities, some have not. The individual's own mindset is responsible for it's own personality and behaviour.
 
-In psychology, according to Sigmund Freud, human mind is classified majorly into three categories. Conscious, subconscious \& unconscious mind. All the events around us which we are experiencing at the current instant which is also known as the "awareness", comes due to the conscious mind whereas all of our habits and routines which are formed due to the repetition of different task and our experiences are stored in the subconscious.
+In psychology, according to Sigmund Freud, human mind is classified majorly into three categories. Conscious, subconscious \& unconscious mind. All the events around us which we are experiencing at the current instant which is also known as the `awareness', comes due to the conscious mind whereas all of our habits and routines which are formed due to the repetition of different task and our experiences are stored in the subconscious.
  
 \begin{figure}[H]
 	\includegraphics[width=\columnwidth, keepaspectratio]{FreudIcebergTheory}
