--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/VedicAstrology.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Report/TheoreticalFramework/VedicAstrology.tex
@@ -13,7 +13,7 @@ Vedic astrology(Jyotish) is one of the most important limb(Vedanga) out of the t
 There are many ancient texts and scriptures about all these three branches of the vedic astrology, that were written by Maharishies. But here, we are only considering the Surya Siddhanta\cite{SuryaSiddhanta, wiki:ss} and Brihat Parashara Hora Shastra\cite{BrihatParasharHoraShastraVol1, BrihatParasharHoraShastraVol2, wiki:bphs} which are the most popular texts that are used by most of the astrologers today for astrological predictions and consultations. We also discuss some of rules and priciples described by the dictums found in these texts.
 
 \subsubsection{Properties of Planets}
-The study of planets holds great significance in understanding an individual's horoscope and predicting future events. Vedic astrology recognizes nine celestial bodies as planets, including the Sun, Moon, Mercury, Venus, Mars, Jupiter, Saturn, Rahu, and Ketu. Here's a brief introduction to each of these planets in the context of Vedic astrology:
+The study of planets holds great significance in understanding an individual's horoscope and predicting future events. Vedic astrology recognizes nine celestial bodies as planets, including the Sun, Moon, Mercury, Venus, Mars, Jupiter, Saturn, Rahu, and Ketu. Each planet's placement, aspects, and interactions with other planets in an individual's birth chart play a crucial role in determining their personality traits, strengths, challenges, and life events according to Vedic astrology. Here's a brief introduction to each of these planets in the context of Vedic astrology:
 
 \begin{itemize}
 	\item \textbf{Sun (Surya):} The Sun represents the self, vitality, authority, and leadership. It symbolizes the soul and is considered the king among the planets.
@@ -26,8 +26,6 @@ The study of planets holds great significance in understanding an individual's h
 	\item \textbf{Rahu:} Rahu is a shadow planet and represents material desires, obsession, illusions, and worldly attachments. It signifies ambition and can bring sudden changes.
 	\item \textbf{Ketu:} Ketu is the other shadow planet and represents spirituality, detachment, mysticism, and karmic lessons. It signifies liberation and can bring unconventional experiences.
 \end{itemize}
-
-Each planet's placement, aspects, and interactions with other planets in an individual's birth chart play a crucial role in determining their personality traits, strengths, challenges, and life events according to Vedic astrology.
 
 \subsubsection{Dashas \& Transits}
 In Vedic astrology, dashas and transits are important techniques used to predict and analyze various aspects of a person's life based on the positions of planets and their movements at particular time periods after the birth of an individual. Chapter 53 of BPHS\cite{BrihatParasharHoraShastraVol1, BrihatParasharHoraShastraVol2, wiki:bphs} discusses about different effects of dashas of the different planets.
