--- a/A Low Latency Digital Filter using Recurrent Neural Network/Synopsis/Citations.bib
+++ b/A Low Latency Digital Filter using Recurrent Neural Network/Synopsis/Citations.bib
@@ -52,6 +52,60 @@
 	doi = {10.13140/RG.2.2.36370.99522}
 }
 
+@InProceedings{10.1007/978-90-481-3656-8_52,
+	author="S.A., Stefanova",
+	editor="Iskander, Magued
+	and Kapila, Vikram
+	and Karim, Mohammad A.",
+	title="\href{https://doi.org/10.1007/978-90-481-3656-8_52}{One Dimensional IIR Digital Filter Modeling Based on Recurrent Neural Network}",
+	booktitle="Technological Developments in Education and Automation",
+	year="2010",
+	publisher="Springer Netherlands",
+	address="Dordrecht",
+	pages="281--286",
+	abstract="One approach for modeling of 1-D IIR digital filter based on two layer recurrent neural network is proposed. The Lagrange multipliers method has been applied to the training process of the neural network. The set of time domain data is generated and used as a target function in the training procedure. To demonstrate the effectiveness of the proposed neural network model some simulations have been done using input harmonic signals with different frequencies. The analysis of the behaviour of neural network model and target filter frequency responses shows good approximation results.",
+	isbn="978-90-481-3656-8"
+}
+
+@INPROCEEDINGS{6396136,
+	author={Skogstad, Ståle A. and Holm, Sverre and Høvin, Mats},
+	booktitle={2012 International Conference on Engineering and Technology (ICET)}, 
+	title="\href{https://doi.org/10.1109/ICEngTechnol.2012.6396136}{Digital IIR filters with minimal group delay for real-time applications}", 
+	year={2012},
+	volume={},
+	number={},
+	pages={1-6},
+	keywords={Delay;Attenuation;Passband;Optimization;Algorithm design and analysis;Finite impulse response filter;Search problems;real-time signal processing;low delay filters;real time applications;filtering techniques;filter design;multi-objective optimization;metaheuristics},
+	doi={10.1109/ICEngTechnol.2012.6396136}
+}
+
+@InProceedings{10.1007/978-90-481-9151-2_38,
+author="Stefanova, S.A.",
+editor="Elleithy, Khaled and Sobh, Tarek and Iskander, Magued and Kapila, Vikram and Karim, Mohammad A. and Mahmood, Ausif",
+title="\href{https://doi.org/10.1007/978-90-481-9151-2_38}{One Approach for Training of Recurrent Neural Network Model of IIR Digital Filter}",
+booktitle="Technological Developments in Networking, Education and Automation",
+year="2010",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="219--224",
+abstract="One approach for training of recurrent neural network model of 1-D IIR digital filter is proposed. The sensitivity coefficients method has been applied in the training process of the neural network. The set of time domain data is generated and used as a target function in the training procedure. The modeling results have been obtained for two different cases - for 4-th order bandpass IIR digital filter and for partial response IIR digital filter. The frequency domain behavior of the neural network model and the target IIR filter has been investigated. The analysis of the frequency responses shows good approximation results.",
+isbn="978-90-481-9151-2"
+}
+
+@article{DBLP:journals/corr/abs-2005-09237,
+  author       = {Lu Ma and Hua Huang and Pei Zhao and Tengrong Su},
+  title        = "\href{https://doi.org/10.48550/arXiv.2005.09237}{Acoustic Echo Cancellation by Combining Adaptive Digital Filter and Recurrent Neural Network}",
+  journal      = {CoRR},
+  volume       = {abs/2005.09237},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2005.09237},
+  eprinttype    = {arXiv},
+  eprint       = {2005.09237},
+  timestamp    = {Fri, 22 May 2020 16:21:28 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2005-09237.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @Article{en15207553,
 	AUTHOR = {Ali, Ayesha and Rehman, Ateeq Ur and Almogren, Ahmad and Eldin, Elsayed Tag and Kaleem, Muhammad},
 	TITLE = "\href{https://www.mdpi.com/1996-1073/15/20/7553}{Application of Deep Learning Gated Recurrent Unit in Hybrid Shunt Active Power Filter for Power Quality Enhancement}",
