--- a/A Low Latency Digital Filter using Recurrent Neural Network/Synopsis/ProblemStatement/LiteratureSurvey.tex
+++ b/A Low Latency Digital Filter using Recurrent Neural Network/Synopsis/ProblemStatement/LiteratureSurvey.tex
@@ -44,6 +44,14 @@ Some various methods for designing digital Finite Impulse Response (FIR) filters
 	\hline
 	\cite{595494} & A comparison between recurrent neural network architectures for digital equalization & This paper shows a comparison between three different first-order RNN architectures. & 1997\\
 	\hline
+	\cite{10.1007/978-90-481-9151-2_38} & One Approach for Training of Recurrent Neural Network Model of IIR Digital Filter &  & 2010\\
+	\hline
+	\cite{DBLP:journals/corr/abs-2005-09237} & Acoustic Echo Cancellation by Combining Adaptive Digital Filter and Recurrent Neural Network &  & 2020\\
+	\hline
+	\cite{6396136} & Digital IIR filters with minimal group delay for real-time applications &  & 2012\\
+	\hline
+	\cite{10.1007/978-90-481-3656-8_52} & One Dimensional IIR Digital Filter Modeling Based on Recurrent Neural Network &  & 2010\\
+	\hline
 \end{tabularx}
 \vspace{1\baselineskip}
 
