--- a/A Low Latency Digital Filter using Recurrent Neural Network/Synopsis/main.tex
+++ b/A Low Latency Digital Filter using Recurrent Neural Network/Synopsis/main.tex
@@ -7,7 +7,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{cite}
 \usepackage{graphicx}
-\graphicspath{ {assets/} }
+\graphicspath{ {../assets/} }
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{fontspec}
