--- a/PaperTemplate.tex
+++ b/PaperTemplate.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage{multicol}
 \usepackage[hidelinks]{hyperref}
-\title{Emotionally Intelligent Machines(EIM's) \& Sentiment Synthesis based on Ancient Vedic Astrology}
+\title{Research Title}
 \author{Mohit Singh}
 \begin{document}
 	\maketitle
